QuestTask: add onEnteringRegion